Fix misalignment of comment and like btns.

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -126,7 +126,6 @@ page-home {
     margin: 0px 0px 0px 0px;
     padding-left: 16px;
     padding-right: 16px;
-    padding-bottom: 2px;
   }
 
   .users-padding {
