--- a/src/pages/home/story/story.scss
+++ b/src/pages/home/story/story.scss
@@ -44,7 +44,6 @@ page-story {
     margin: 0px 0px 0px 0px;
     padding-left: 16px;
     padding-right: 16px;
-    padding-bottom: 2px;
   }
 
   .comment-section-padding {
